--- a/helloworld/templates/home.html
+++ b/helloworld/templates/home.html
@@ -1,6 +1,10 @@
 <!-- templates/home.html -->
-{% extends 'base.html' %}
 
 {% block content %}
-<h1>Homepage</h1>
+<h1>Message Board Homepage</h1>
+<ul>
+    {% for post in all_posts_list %}
+    <li>{{ post.text }}</li>
+    {% endfor %}
+</ul>
 {% endblock content %}
